--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
 ﻿<!DOCTYPE html>
-
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <title>Title</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
+    <meta name="referrer" content="origin">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="msapplication-tap-highlight" content="no" />
+    <title>CDiscount GitHub</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-
+    <form method="post">
+        <label>Identifiant</label>
+        <input type="email" name="email" value="" />
+        <label>MDP</label>
+        <button type="submit">Valider</button>
+        <button type="reset">Effacer</button>
+    </form>
+    <script type="text/javascript" src="assets/js/script.js"></script>
 </body>
 </html>
